<resources>
    <string name="app_name">DataBackup</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="home">Home</string>
    <string name="root" translatable="false">Root</string>
    <string name="storage_space">Storage space</string>
    <string name="error">Error</string>
    <string name="application">Application</string>
    <string name="data">Data</string>
    <string name="confirm">Confirm</string>
    <string name="backup_apk_processing">Backup apk…</string>
    <string name="backup_finished">Backup finished</string>
    <string name="restore_finished">Restore finished</string>
    <string name="install_apk_processing">Install apk…</string>
    <string name="default_backup_save_path" translatable="false">/storage/emulated/0/DataBackup</string>
    <string name="backup_dir">Backup directory</string>
    <string name="compression_type">Compression type</string>
    <string name="architecture">Architecture</string>
    <string name="cancel">Cancel</string>
    <string name="tips">Tips</string>
    <string name="success">Success</string>
    <string name="backup_processing">Backup processing</string>
    <string name="restore_processing">Restore processing</string>
    <string name="get_apk_path">Get apk path</string>
    <string name="compress_apk">Compress apk</string>
    <string name="compress">Compress</string>
    <string name="install">Install</string>
    <string name="set_SELinux">Set SELinux</string>
    <string name="decompress">Decompress</string>
    <string name="compress_failed">Compress failed</string>
    <string name="path_not_exist">Path not exist</string>
    <string name="compress_apk_failed">Compress apk failed</string>
    <string name="decompress_failed">Decompress failed</string>
    <string name="install_apk_failed">Install apk failed!</string>
    <string name="set_SELinux_failed">Set SELinux failed</string>
    <string name="get_app_version_failed">Get app version failed</string>
    <string name="please_type_key_word">Please type key word</string>
    <string name="please_exit_search_mode">Please exit search mode</string>
    <string name="custom_dir">Custom directory</string>
    <string name="environment_detection">Environment detection</string>
    <string name="environment_detection_tip">To run correctly, the following detections need to pass:</string>
    <string name="test">Test</string>
    <string name="broken">Broken</string>
    <string name="selected">Selected</string>
    <string name="backup_user">Backup user</string>
    <string name="history_version">History version</string>
    <string name="feature_foresight">Feature foresight</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="compression_type_help">Choose compression type of applications and data, which affects both backup and restore. If you don\'t know what this option is for, don\'t change it</string>
    <string name="backup_user_help">Set backup user for dual/multi-user backup, the backup user folder automatically selected by the backup/restore page. \n\nCurrently passed the test:\nMIUI dual-apps, UserManager, Island.</string>
    <string name="restore_user_help">Set the recovery user for dual/multi-user recovery, the target user for data recovery. \n\nDual-apps may break after the restoration, and a restart is required to make them work.</string>
    <string name="cautious_action">[Be cautious]</string>
    <string name="backup_version" translatable="false">1</string>
    <string name="generate_backup_info_failed">Generate backup info failed!</string>
    <string name="backup_not_support">No backup detected or the current version is not compatible with the selected backup! If the backup already exists, please use the historical version to restore.</string>
    <string name="generate_media_info_failed">Generate media info failed!</string>
    <string name="restore_user">Restore user</string>
    <string name="delete_confirm">Delete?</string>
    <string name="install_apk_installed">Apk installed</string>
    <string name="get_app_version_code_failed">Get app version code failed</string>
    <string name="no_update_and_skip">No update, skip</string>
    <string name="failed">Failed</string>
    <string name="otg_change_dir">OTG detected. Do you want to change the backup directory to OTG directory?</string>
    <string name="otg_not_support">The current OTG format does not support file transfers larger than 4G\nPlease format it into one of the following formats:\nFuseblk, ExFAT (recommended), NTFS, ext4, f2fs</string>
    <string name="symbol_tick" translatable="false">✔</string>
    <string name="symbol_cross" translatable="false">✖</string>
    <string name="grant_root_access">Grant root access</string>
    <string name="release_prebuilt_binaries">Release prebuilt binaries</string>
    <string name="activate_bashrc">Activate bashrc</string>
    <string name="finish">Finish</string>
    <string name="welcome_to_use">Welcome to use</string>
    <string name="start_subtitle">According to relevant policies, you need to carefully read and agree to the following User Agreement and Privacy Policy before you start using this application</string>
    <string name="guide_one_content">● All data generated by this application is used for the backup/restore function itself and is only stored locally\n● Illegal reselling of this application is strictly prohibited\n● Permission description:\nandroid.permission.QUERY_ALL_PACKAGES: Get all the application packages, only used to generate backup list\nandroid.permission.INTERNET: Only used to get application update information online)\nandroid.permission.READ_EXTERNAL_STORAGE/android.permission.WRITE_EXTERNAL_STORAGE/android.permission.MANAGE_EXTERNAL_STORAGE: Read and write backup configuration, archive, etc.\nandroid.permission.PACKAGE_USAGE_STATS: Used to get application data size.\nRoot: Special permission only for the backup/restore function itself</string>
    <string name="guide_two_subtitle">To use this app correctly, you need to pass the following tests</string>
    <string name="symbol_dot" translatable="false">●</string>
    <string name="next_step">Next step</string>
    <string name="refresh">Refresh</string>
    <string name="internal_storage">Internal storage</string>
    <string name="otg" translatable="false">OTG</string>
    <string name="check_update">Check update</string>
    <string name="download">Download</string>
    <string name="support">Support</string>
    <string name="fetch_failed">Fetch failed</string>
    <string name="not_plugged_in">Not plugged in</string>
    <string name="latest">Latest</string>
    <string name="unsupported_format">Unsupported format</string>
    <string name="fetching">Fetching</string>
    <string name="user">User</string>
    <string name="backup_app_title">Back up apps and data, here we go</string>
    <string name="select_app">Select app</string>
    <string name="start_backup">Start backup</string>
    <string name="media">Media</string>
    <string name="backup_media_title">Backup your media, or custom directory</string>
    <string name="edit">Edit</string>
    <string name="system_app">System app</string>
    <string name="symbol_triangle" translatable="false">▲</string>
    <string name="symbol_anti_triangle" translatable="false">▼</string>
    <string name="speed">Speed</string>
    <string name="size">Size</string>
    <string name="letter_obb" translatable="false">OBB</string>
    <string name="letter_data" translatable="false">DATA</string>
    <string name="letter_user" translatable="false">USER</string>
    <string name="letter_user_de" translatable="false">USER_DE</string>
    <string name="letter_apk" translatable="false">APK</string>
    <string name="progress">Progress</string>
    <string name="total">Total</string>
    <string name="ready">Ready</string>
    <string name="add">Add</string>
    <string name="backup_dir_create_failed">Backup dir create failed!</string>
    <string name="restore_dir">Restore directory</string>
    <string name="restore_app_title">Restore your apps and data here</string>
    <string name="start_restore">Start restore</string>
    <string name="restore_media_title">Restore your media, or custom directory</string>
    <string name="confirm_remove">Sure to remove it</string>
    <string name="symbol_question">\?</string>
    <string name="remove_files_too">This will remove related files, too</string>
    <string name="symbol_exclamation">!</string>
    <string name="remove_failed">Remove failed</string>
    <string name="retrieve">Retrieve</string>
    <string name="retrieve_title">Repair or clear invalid application configuration</string>
    <string name="start">Start</string>
    <string name="retrieve_finish">Retrieved</string>
    <string name="app_retrieved">The retrieved app</string>
    <string name="backup_whole_dir_for_safe">For archiving, please select the entire DataBackup directory to prevent loss of configuration</string>
    <string name="confirm_remove_all_app_and_data_that_backed_up">Sure to remove all apps and data that backed up</string>
    <string name="please_wait">Please wait</string>
    <string name="log">Log</string>
    <string name="settings">Settings</string>
    <string name="log_title">Help the developer locate the problem.</string>
    <string name="clear">Clear</string>
    <string name="stored_in">Stored in</string>
    <string name="dynamic_colors">Dynamic colors</string>
    <string name="dynamic_colors_title">Better Material You. Restart to take effect</string>
    <string name="tmp">Tmp</string>
    <string name="current_update">Current update</string>
    <string name="bin_permission_error">Prebuilt file permissions are incorrect, please manually grant [777]</string>
    <string name="backup_itself">Backup itself</string>
    <string name="backup_itself_title">When backing up the application, it automatically backs up its own installation package to the backup directory</string>
    <string name="auto_fix_multi_user_context">Context fix</string>
    <string name="auto_fix_multi_user_context_title">Auto fix multi-user context, no restart needed for restored multi-user applications</string>
    <string name="feature_not_supported">Feature not supported for your system</string>
    <string name="disagree">Disagree</string>
    <string name="agree">Agree</string>
    <string name="none">None</string>
    <string name="not_selected">Not selected</string>
    <string name="all">All</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="server_address">Server address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remove">Remove</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="start_desc">All data generated by this application is only used for backup/restore, and is only stored locally. Illegal reselling is strictly prohibited</string>
    <string name="network">Network</string>
    <string name="network_subtitle" translatable="false">android.permission.INTERNET</string>
    <string name="network_desc">Only used to get app update information</string>
    <string name="application_subtitle" translatable="false">android.permission.QUERY_ALL_PACKAGES\nandroid.permission.PACKAGE_USAGE_STATS</string>
    <string name="application_desc">Obtain application package information, used to generate backup list and obtain application data size</string>
    <string name="storage">Storage</string>
    <string name="storage_subtitle" translatable="false">android.permission.READ_EXTERNAL_STORAGE\nandroid.permission.WRITE_EXTERNAL_STORAGE\nandroid.permission.MANAGE_EXTERNAL_STORAGE</string>
    <string name="storage_desc">Used for backup configuration, archive read and write</string>
</resources>