<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_home"
        android:title="@string/home" />
    <item
        android:id="@+id/backupFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_backup"
        android:title="@string/backup" />
    <item
        android:id="@+id/restoreFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_restore"
        android:title="@string/restore" />
    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_settings"
        android:title="@string/settings" />
</menu>