<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_round_sort"
        android:title="@string/sort"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/ic_round_filter_list"
        android:title="@string/filter"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_app"
        android:icon="@drawable/ic_round_check"
        android:title="@string/application"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_all"
        android:icon="@drawable/ic_round_done_all"
        android:title="@string/all"
        app:showAsAction="always" />
</menu>