<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.xayah.databackup.fragment.home.HomeFragment"
        android:label="@string/app_name" />
    <fragment
        android:id="@+id/backupFragment"
        android:name="com.xayah.databackup.fragment.backup.BackupFragment"
        android:label="@string/backup" />
    <fragment
        android:id="@+id/moreFragment"
        android:name="com.xayah.databackup.fragment.more.MoreFragment"
        android:label="@string/more" />
    <fragment
        android:id="@+id/restoreFragment"
        android:name="com.xayah.databackup.fragment.restore.RestoreFragment"
        android:label="@string/restore" />
</navigation>