<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/materialButtonToggleGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            app:checkedButton="@id/button_none"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/button_none"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/none" />

            <Button
                android:id="@+id/button_selected"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/selected" />

            <Button
                android:id="@+id/button_not_selected"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/not_selected" />

        </com.google.android.material.button.MaterialButtonToggleGroup>
    </LinearLayout>
</layout>